# Gaussian-Splatting-Toolkit

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc.js  CONTRIBUTING.md  Dockerfile  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  pyproject.toml  requirements_dev.txt
.devcontainer/: devcontainer.json  docker-compose.yml  post_process.sh
docs/: conf.py  index.rst
docs/cli/: cli.rst
docs/getting_started/: installation.rst  usage.rst
docs/gstk/: gstk.rst
docs/source/: conf.py  index.rst
docs/source/cli/: cli.rst
docs/source/getting_started/: installation.rst  quickstart.rst  usage.rst
examples/: get_view_from_pose.py
extra_toolkit/: articulated_utils.py  pcd_utils.py  tsdf_fusion.py
gs_toolkit/: __init__.py
gs_toolkit/cameras/: camera_optimizers.py  camera_paths.py  camera_utils.py  cameras.py  lie_groups.py  rays.py
gs_toolkit/configs/: base_config.py  camera.yaml  camera_calibrated.txt  camera_calibrated.yaml  config_utils.py  dataparser_configs.py  experiment_config.py  method_config.py  method_configs.py
gs_toolkit/data/: colmap_loader.py  data_readers.py  pixel_samplers.py  scene_box.py
gs_toolkit/data/datamanagers/: base_datamanager.py  full_images_datamanager.py  parallel_datamanager.py  random_cameras_datamanager.py
gs_toolkit/data/dataparsers/: base_dataparser.py  blender_dataparser.py  colmap_dataparser.py  gs_dataparser.py  gs_toolkit_dataparser.py  scannet_dataparser.py
gs_toolkit/data/datasets/: base_dataset.py
gs_toolkit/data/datasynthetic/: object_generation.py
gs_toolkit/data/process_data/: base_converter_to_gstk_dataset.py  colmap_converter_to_gstk_dataset.py
gs_toolkit/data/utils/: colmap_parsing_utils.py  data_utils.py  dataloaders.py  dataparsers_utils.py  gs_toolkit_collate.py  pixel_sampling_utils.py
gs_toolkit/diff-gaussian-rasterization/: CMakeLists.txt  LICENSE.md  README.md  ext.cpp  rasterize_points.cu  rasterize_points.h
gs_toolkit/diff-gaussian-rasterization/cuda_rasterizer/: auxiliary.h  backward.cu  forward.cu  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
gs_toolkit/engine/: __init__.py  callbacks.py  optimizers.py  schedulers.py  train.py  trainer.py
gs_toolkit/evaluation/3d_aruco_eval/: CMakeLists.txt  README.md
gs_toolkit/evaluation/3d_aruco_eval/inc/: aruco_eval.hpp  aruco_utility.hpp
gs_toolkit/evaluation/3d_aruco_eval/src/: aruco_eval.cpp  calibrate_camera.cpp  detect_markers.cpp  generate.cpp  main.cpp
gs_toolkit/evaluation/surface_distance/: CMakeLists.txt  README.md
gs_toolkit/evaluation/surface_distance/inc/: happly.h  stlloader.h  triangle_mesh_distance.h
gs_toolkit/evaluation/surface_distance/src/: main.cpp
gs_toolkit/exporter/: exporter_utils.py  marching_cubes.py  mask_generater.py  texture_utils.py  tsdf_fusion.py  tsdf_utils.py
gs_toolkit/field_components/: __init__.py  activations.py  base_field_component.py  embedding.py  encodings.py  field_heads.py  mlp.py  spatial_distortions.py  temporal_distortions.py
gs_toolkit/fields/: base_field.py  density_fields.py  sdf_field.py
gs_toolkit/gs_components/: setup.py
gs_toolkit/gs_components/rasterizer/: _torch_impl.py  project_gaussians.py  rasterize.py  sh.py  utils.py
gs_toolkit/gs_components/rasterizer/cuda/: _backend.py
gs_toolkit/gs_components/rasterizer/cuda/csrc/: CMakeLists.txt  backward.cu  backward.cuh  bindings.cu  bindings.h  (+6 more)
gs_toolkit/model_components/: cameras.py  losses.py  ray_generators.py  renderer.py  renderers.py  scene.py  scene_colliders.py
gs_toolkit/models/: __init__.py  base_model.py  depth_gs.py  gaussian_splatting.py  surface_gs.py  vanilla_gs.py
gs_toolkit/pipelines/: base_pipeline.py  cogs_pipeline.py
gs_toolkit/process_data/: base_converter_to_gstk_dataset.py  colmap_converter_to_gstk_dataset.py  colmap_utils.py  equirect_utils.py  hloc_utils.py  images_to_gstk_dataset.py  metashape_utils.py  odm_utils.py  polycam_utils.py  process_data_utils.py  realitycapture_utils.py  record3d_utils.py  video_to_gstk_dataset.py
gs_toolkit/process_data/depth_estimation/: blocks.py  dpt.py
gs_toolkit/process_data/depth_estimation/utils/: transform.py
gs_toolkit/render/: render.py  renderer.py
gs_toolkit/scripts/: eval.py  exporter.py  mono_depth_estimation.py  process_data.py  render.py  scripts.py  train.py
gs_toolkit/scripts/datasets/: process_project_aria.py
gs_toolkit/scripts/downloads/: download_data.py  eyeful_tower.py  utils.py
gs_toolkit/scripts/viewer/: run_viewer.py
gs_toolkit/thrid_party/diff-gaussian-rasterization/cuda_rasterizer/: backward.h  forward.h
gs_toolkit/thrid_party/diff-gaussian-rasterization/diff_gaussian_rasterization/: __init__.py
gs_toolkit/thrid_party/simple-knn/: .gitignore  simple_knn.cu  simple_knn.h
gs_toolkit/utils/: __init__.py  camera_utils.py  colormaps.py  colors.py  comms.py  decorators.py  eval_utils.py  external.py  gaussian_utils.py  graphics_utils.py  image_utils.py  install_checks.py  io.py  losses.py  math.py  misc.py  poses.py  printing.py  profiler.py  rich_utils.py  scripts.py  system_utils.py  tensor_dataclass.py  writer.py
gs_toolkit/viewer/: __init__.py  control_panel.py  export_panel.py  render_panel.py  render_state_machine.py  utils.py  viewer.py  viewer_elements.py
gs_toolkit/viewer_legacy/app/: .eslintrc.json  run_deploy.py
gs_toolkit/viewer_legacy/app/public/: electron.js  index.html  manifest.json
gs_toolkit/viewer_legacy/app/src/: SceneNode.js  reducer.js  store.js  subscriber.js  utils.js
gs_toolkit/viewer_legacy/server/: control_panel.py  gui_utils.py  path.py  render_state_machine.py  utils.py  viewer_elements.py  viewer_state.py  viewer_utils.py
gs_toolkit/viewer_legacy/server/state/: node.py  state_node.py
gs_toolkit/viewer_legacy/viser/: __init__.py  gui.py  message_api.py  messages.py  server.py
notebook/: get_view_from_pose.ipynb
scripts/: extract_mesh.sh  extract_point_cloud.sh
thrid_party/diff-gaussian-rasterization/cuda_rasterizer/: config.h
thrid_party/diff-gaussian-rasterization/diff_gaussian_rasterization/: __init__.py
thrid_party/simple-knn/: spatial.h
(+7 files in other folders)
