[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gstoolkit"
authors = [
    {name = "Hu Tianrun", email = "tianrunhu@gmail.com"},
]
version = "0.0.1"
description = "All-in-one repository for state-of-the-art Gaussian Splatting"
readme = "README.md"
license = { text="MIT"}
requires-python = ">=3.8.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]

# Dependencies
dependencies = [
    "rawpy",
    "tyro",
    "plyfile==0.8.1",
    "jaxtyping",
    "opencv-python",
    "rich",
    "diff_gaussian_rasterization @ file:///workspace/thrid_party/diff-gaussian-rasterization",
    "simple_knn @ file:///workspace/thrid_party/simple-knn",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "black[jupyter]",
    "pre-commit",
    "pytest",
    "pytest-xdist",
    "typeguard",
    "ruff",
    "pycolmap",
    "sshconfig",
    "projectaria_tools[all]",
]

[project.scripts]
gs-process-data = "gs_toolkit.scripts.process_data:entrypoint"
gs-train = "gs_toolkit.scripts.train:entrypoint"

[tool.setuptools.packages.find]
where = ["."]
include = ["gs_toolkit", "third_party/*"]
exclude = []
namespaces = false

[tool.ruff]
line-length = 120
select = [
    "E",  # pycodestyle errors.
    "F",  # Pyflakes rules.
    "PLC",  # Pylint convention warnings.
    "PLE",  # Pylint errors.
    "PLR",  # Pylint refactor recommendations.
    "PLW",  # Pylint warnings.
]
ignore = [
    "E501",  # Line too long.
    "F722",  # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "F821",  # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "PLR2004",  # Magic value used in comparison.
    "PLR0915",  # Too many statements.
    "PLR0913",  # Too many arguments.
    "PLC0414",  # Import alias does not rename variable. (this is used for exporting names)
    "PLC1901",  # Use falsey strings.
    "PLR5501",  # Use `elif` instead of `else if`.
    "PLR0911",  # Too many return statements.
    "PLR0912",  # Too many branches.
    "PLW0603",  # Globa statement updates are discouraged.
    "PLW2901",  # For loop variable overwritten.
]
